@@ -551,52 +551,53 @@ char *format_rational( pslr_rational_t rational, char * fmt ) {
 }
 
 void print_status_info( pslr_handle_t h, pslr_status status ) {    
-    printf("\ncurrent iso: %d\n", status.current_iso);
-    printf("current shutter speed: %d/%d\n", status.current_shutter_speed.nom, status.current_shutter_speed.denom);
-    printf("camera max shutter speed: %d/%d\n", status.max_shutter_speed.nom, status.max_shutter_speed.denom);
-    printf("current aperture: %s\n", format_rational( status.current_aperture, "%.1f"));
-    printf("lens max aperture: %s\n", format_rational( status.lens_max_aperture, "%.1f"));
-    printf("lens min aperture: %s\n", format_rational( status.lens_min_aperture, "%.1f"));
-    printf("set shutter speed: %d/%d\n", status.set_shutter_speed.nom, status.set_shutter_speed.denom);
-    printf("set aperture: %s\n", format_rational( status.set_aperture, "%.1f"));
-    printf("fixed iso: %d\n", status.fixed_iso);
-    printf("auto iso: %d-%d\n", status.auto_iso_min,status.auto_iso_max);
-    printf("jpeg quality: %d\n", status.jpeg_quality);
-    printf("jpeg resolution: %dM\n", pslr_get_jpeg_resolution( h, status.jpeg_resolution));
-    printf("jpeg image mode: %d\n", status.jpeg_image_mode);
-    printf("jpeg saturation: %d\n", status.jpeg_saturation);
-    printf("jpeg contrast: %d\n", status.jpeg_contrast);
-    printf("jpeg sharpness: %d\n", status.jpeg_sharpness);
-    printf("jpeg hue: %d\n", status.jpeg_hue);
-    printf("zoom: %s mm\n", format_rational(status.zoom, "%.2f"));
-    printf("focus: %d\n", status.focus);
-    printf("color space: %d\n", status.color_space);
-    printf("image format: %d\n", status.image_format);
-    printf("raw format: %d\n", status.raw_format);
-    printf("light meter flags: %d\n", status.light_meter_flags);
-    printf("ec: %s\n", format_rational( status.ec, "%.2f" ) );
-    printf("custom ev steps: %d\n", status.custom_ev_steps);
-    printf("custom sensitivity steps: %d\n", status.custom_sensitivity_steps);
-    printf("exposure mode: %d (%d)\n", status.exposure_mode, status.exposure_submode);
-    printf("user mode flag: %d\n", status.user_mode_flag);
-    printf("ae metering mode: %d\n", status.ae_metering_mode);
-    printf("af mode: %d\n", status.af_mode);
-    printf("af point select: %d\n", status.af_point_select);
-    printf("selected af point: %d\n", status.selected_af_point);
-    printf("focused af point: %d\n", status.focused_af_point);
-    printf("drive mode: %d\n", status.drive_mode);
-    printf("auto bracket mode: %s\n", status.auto_bracket_mode > 0 ? "on" : "off");
-    printf("auto bracket picture count: %d\n", status.auto_bracket_picture_count);
-    printf("auto bracket ev: %s\n", format_rational(status.auto_bracket_ev, "%.2f"));
-    printf("shake reduction: %s\n", status.shake_reduction > 0 ? "on" : "off");
-    printf("white balance mode: %d\n", status.white_balance_mode);
-    printf("white balance adjust mg: %d\n", status.white_balance_adjust_mg);
-    printf("white balance adjust ba: %d\n", status.white_balance_adjust_ba);
-    printf("flash mode: %d\n", status.flash_mode);
-    printf("flash exposure compensation: %.2f\n", (1.0 * status.flash_exposure_compensation/256));
-    printf("manual mode ev: %.2f\n", (1.0 * status.manual_mode_ev / 10));
-    printf("lens: %s\n", get_lens_name(status.lens_id1, status.lens_id2));
-    printf("battery: %.2fV %.2fV %.2fV %.2fV\n", 0.01 * status.battery_1, 0.01 * status.battery_2, 0.01 * status.battery_3, 0.01 * status.battery_4);
+    printf("\n");
+    printf("%-32s: %d\n", "current iso", status.current_iso);
+    printf("%-32s: %d/%d\n", "current shutter speed", status.current_shutter_speed.nom, status.current_shutter_speed.denom);
+    printf("%-32s: %d/%d\n", "camera max shutter speed", status.max_shutter_speed.nom, status.max_shutter_speed.denom);
+    printf("%-32s: %s\n", "current aperture", format_rational( status.current_aperture, "%.1f"));
+    printf("%-32s: %s\n", "lens max aperture", format_rational( status.lens_max_aperture, "%.1f"));
+    printf("%-32s: %s\n", "lens min aperture", format_rational( status.lens_min_aperture, "%.1f"));
+    printf("%-32s: %d/%d\n", "set shutter speed", status.set_shutter_speed.nom, status.set_shutter_speed.denom);
+    printf("%-32s: %s\n", "set aperture", format_rational( status.set_aperture, "%.1f"));
+    printf("%-32s: %d\n", "fixed iso", status.fixed_iso);
+    printf("%-32s: %d-%d\n", "auto iso", status.auto_iso_min,status.auto_iso_max);
+    printf("%-32s: %d\n", "jpeg quality", status.jpeg_quality);
+    printf("%-32s: %dM\n", "jpeg resolution", pslr_get_jpeg_resolution( h, status.jpeg_resolution));
+    printf("%-32s: %d\n", "jpeg image mode", status.jpeg_image_mode);
+    printf("%-32s: %d\n", "jpeg saturation", status.jpeg_saturation);
+    printf("%-32s: %d\n", "jpeg contrast", status.jpeg_contrast);
+    printf("%-32s: %d\n", "jpeg sharpness", status.jpeg_sharpness);
+    printf("%-32s: %d\n", "jpeg hue", status.jpeg_hue);
+    printf("%-32s: %s mm\n", "zoom", format_rational(status.zoom, "%.2f"));
+    printf("%-32s: %d\n", "focus", status.focus);
+    printf("%-32s: %d\n", "color space", status.color_space);
+    printf("%-32s: %d\n", "image format", status.image_format);
+    printf("%-32s: %d\n", "raw format", status.raw_format);
+    printf("%-32s: %d\n", "light meter flags", status.light_meter_flags);
+    printf("%-32s: %s\n", "ec", format_rational( status.ec, "%.2f" ) );
+    printf("%-32s: %d\n", "custom ev steps", status.custom_ev_steps);
+    printf("%-32s: %d\n", "custom sensitivity steps", status.custom_sensitivity_steps);
+    printf("%-32s: %d (%d)\n", "exposure mode", status.exposure_mode, status.exposure_submode);
+    printf("%-32s: %d\n", "user mode flag", status.user_mode_flag);
+    printf("%-32s: %d\n", "ae metering mode", status.ae_metering_mode);
+    printf("%-32s: %d\n", "af mode", status.af_mode);
+    printf("%-32s: %d\n", "af point select", status.af_point_select);
+    printf("%-32s: %d\n", "selected af point", status.selected_af_point);
+    printf("%-32s: %d\n", "focused af point", status.focused_af_point);
+    printf("%-32s: %d\n", "drive mode", status.drive_mode);
+    printf("%-32s: %s\n", "auto bracket mode", status.auto_bracket_mode > 0 ? "on" : "off");
+    printf("%-32s: %d\n", "auto bracket picture count", status.auto_bracket_picture_count);
+    printf("%-32s: %s\n", "auto bracket ev", format_rational(status.auto_bracket_ev, "%.2f"));
+    printf("%-32s: %s\n", "shake reduction", status.shake_reduction > 0 ? "on" : "off");
+    printf("%-32s: %d\n", "white balance mode", status.white_balance_mode);
+    printf("%-32s: %d\n", "white balance adjust mg", status.white_balance_adjust_mg);
+    printf("%-32s: %d\n", "white balance adjust ba", status.white_balance_adjust_ba);
+    printf("%-32s: %d\n", "flash mode", status.flash_mode);
+    printf("%-32s: %.2f\n", "flash exposure compensation", (1.0 * status.flash_exposure_compensation/256));
+    printf("%-32s: %.2f\n", "manual mode ev", (1.0 * status.manual_mode_ev / 10));
+    printf("%-32s: %s\n", "lens", get_lens_name(status.lens_id1, status.lens_id2));
+    printf("%-32s: %.2fV %.2fV %.2fV %.2fV\n", "battery", 0.01 * status.battery_1, 0.01 * status.battery_2, 0.01 * status.battery_3, 0.01 * status.battery_4);
 }
 
 void usage(char *name) {
